[package]
name = "cw-heartbeat"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cosmwasm-storage = { version = "1.1" }
cosmwasm-schema = { version = "1.1" }
anyhow = { version = "1.0.51"}
cw-controllers = "0.16"
cw-multi-test = { rev = "9af32fd42efcf28e9a79987f2c2036f879cd5331", git = "https://github.com/CosmWasm/cw-multi-test" }
cw-storage-plus = { rev = "6db957ce730a95141a3ab4dc5ab76fb38e8c0c42", git = "https://github.com/CosmWasm/cw-storage-plus" }
cw-utils = "0.16"
cw2 = "0.16"
cw20 = "0.16"
cw20-base = "0.16"
cw3 = "0.16"
cw4 = "0.16"
cw4-group = "0.16"
cw721 = "0.16"
cw721-base = "0.16"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"]}
syn = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cw-multi-test = { rev = "9af32fd42efcf28e9a79987f2c2036f879cd5331", git = "https://github.com/CosmWasm/cw-multi-test" }
cw-storage-plus = { rev = "6db957ce730a95141a3ab4dc5ab76fb38e8c0c42", git = "https://github.com/CosmWasm/cw-storage-plus" }
cw-utils = "0.16"
